/*
 * Copyright 2022 Apollo Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";
import "apollo/api/v1/config/notification.proto";
package apollo.api.v1.config;

option java_multiple_files = true;
option java_package = "com.ctrip.framework.apollo.api.v1.grpc.config";
option java_outer_classname = "ConfigProto";

message GrpcGetConfigRequest {
  string appId = 1;

  string cluster = 2;

  string namespace = 3;

  string releaseKey = 4;

  string dataCenter = 5;

  string clientIp = 6;

  string label = 7;

  optional GrpcNotificationMessages messages = 8;
}

message GrpcGetConfigResponse {

  optional GrpcApolloConfig config = 1;
}

message GrpcApolloConfig {

  string appId = 1;

  string cluster = 2;

  string namespaceName = 3;

  map<string, string> configurations = 4;

  string releaseKey = 5 ;
}

service ConfigService {

  /**
   * Get config
   * The stream may contain zero or one response.
   * Zero responses indicate that the client's config is up-to-date.
   */
  rpc GetConfig(GrpcGetConfigRequest) returns (stream GrpcGetConfigResponse) {
  }

}