/*
 * Copyright 2022 Apollo Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";
package apollo.api.v1.config;

option java_multiple_files = true;
option java_package = "com.ctrip.framework.apollo.api.v1.grpc.config";
option java_outer_classname = "NotificationProto";

message GrpcWatchNotificationRequest {

  string appId = 1;

  string cluster = 2;

  repeated GrpcNotificationDefinition notifications = 3;

  string dataCenter = 4;

  string clientIp = 5;

  string label = 6;
}

message GrpcNotificationDefinition {

  string namespaceName = 1;

  int64 notificationId = 2;
}

message GrpcWatchNotificationResponse {

  repeated GrpcNotificationResult notifications = 1;
}

message GrpcNotificationResult {

  string namespaceName = 1;

  int64 notificationId = 2;

  GrpcNotificationMessages messages = 3;
}

message GrpcNotificationMessages {

  map<string, int64> details = 1;
}

service NotificationService {

  /**
   * Get notifications
   * The stream may contain zero or one response.
   * Zero responses indicate that the client's config is up-to-date.
   */
  rpc Watch(GrpcWatchNotificationRequest) returns (stream GrpcWatchNotificationResponse) {
  }

}
