/*
 * Copyright 2022 Apollo Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";
package apollo.api.v1.meta;

option java_multiple_files = true;
option java_package = "com.ctrip.framework.apollo.api.v1.grpc.meta";
option java_outer_classname = "MetaProto";

message GrpcDiscoveryRequest {
  string appId = 1;

  string clientIp = 6;

}

message GrpcServiceInstance {

  string serviceId = 1;

  string instanceId = 2;

  string address = 3;
}

message GrpcDiscoveryResponseData {

  repeated GrpcServiceInstance instances = 1;
}

message GrpcDiscoveryResponse {

  Status status = 1;

  string errorMessage = 2;

  optional GrpcDiscoveryResponseData data = 3;

  enum Status {
    UNKNOWN = 0;
    NOT_MODIFIED = 1;
    OK = 2;
    NOT_FOUND = 3;
    INVALID_ARGUMENT = 4;
    INTERNAL_SERVER_ERROR = 5;
  }
}

service MetaService {

  /**
   * Discovery Services
   */
  rpc GetServices(GrpcDiscoveryRequest) returns (GrpcDiscoveryResponse) {
  }

}